published functional programming notes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                 <a title="29-01-2021" href="ordinary-least-squares-method.html">Ordinary least squares method</a>
             </h2>
             <h2>
+                <a title="29-08-2020" href="kadanes-algorithm.html">Kadanes algorithm</a>
+            </h2>
+            <h2>
                 <a title="22-06-2020" href="inversion-of-control.html">Inversion of control and dependency injection</a>
             </h2>
             <h2>
